writing is implemented

--- a/frontend/src/lib/ms-list/index.html
+++ b/frontend/src/lib/ms-list/index.html
@@ -2,6 +2,7 @@
   [mode]="progress.mode"
   [value]="progress.value"
   [color]="progress.color"
+  [bufferValue]="progress.bufferValue"
 ></mat-progress-bar>
 <div
   class="int_scroll"
